# gnome-shell-extension-web-application-menu

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  README  autogen.sh  configure.ac  extension.mk  include.mk
po/: POTFILES.in  es.po  fr.po  it.po  messages.pot
src/: Makefile.am  extension.js  metadata.json.in  settings.json  webappmenu-setup.py
